// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationInProgress component should renders correctly 1`] = `
<Styled(ScrollViewMock)>
  <Styled(View)>
    <Styled(Styled(ImageComp))
      alt=""
      height="166px"
      host=""
      source={
        Object {
          "testUri": "../../../../core/src/assets/tcp-cc.png",
        }
      }
      url=""
      width="70%"
    />
  </Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs22"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    paddingTop="32px"
    text="lbl_PLCCForm_congratulationsfirst!"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs22"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="lbl_PLCCForm_creditLimit $566"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": undefined,
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": undefined,
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
  <Styled(View) />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs22"
    fontWeight="extrabold"
    margin={null}
    numberOfLines={null}
    paddingBottom="16px"
    text="lbl_PLCCForm_welcomeOffer"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(Styled(BodyCopy)))
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs22"
    fontWeight="regular"
    margin={null}
    marginLeft="60px"
    numberOfLines={null}
    paddingBottom="16px"
    paddingTop="16px"
    text="xyz"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(Styled(BodyCopy)))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs18"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    paddingBottom="24px"
    paddingTop="16px"
    text="lbl_PLCCForm_copyToClipboard"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(Styled(ImageComp))
      alt=""
      height="125px"
      host=""
      source={
        Object {
          "testUri": "../../../../core/src/assets/promo.png",
        }
      }
      url=""
      width="158px"
    />
  </Styled(View)>
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": undefined,
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": "abc",
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color="white"
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_PLCCForm_continueShopping"
      theme={Object {}}
      type="submit"
      url=""
      width="100%"
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs10"
      margin={null}
      numberOfLines={null}
      paddingRight="4px"
      text="lbl_PLCCModal_linksTextPrefix"
      textDecoration={null}
    />
    <Styled(Styled(Anchor))
      accessibilityLabel=""
      anchorVariation="primary"
      colorName={null}
      customStyle={Object {}}
      fontSizeVariation="medium"
      locator=""
      onPress={null}
      paddingRight="28px"
      text="lbl_PLCCForm_details"
      underline={true}
      url="lbl_PLCCModal_detailsLink"
      visible={false}
    />
  </Styled(View)>
</Styled(ScrollViewMock)>
`;

exports[`ApplicationInProgress component should renders correctly while having no bag items 1`] = `
<Styled(ScrollViewMock)>
  <Styled(View)>
    <Styled(Styled(ImageComp))
      alt=""
      height="166px"
      host=""
      source={
        Object {
          "testUri": "../../../../core/src/assets/tcp-cc.png",
        }
      }
      url=""
      width="70%"
    />
  </Styled(View)>
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs22"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    paddingTop="32px"
    text="lbl_PLCCForm_congratulationsundefined!"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(Styled(BodyCopy))
    accessibilityText=""
    color="gray.900"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs22"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="lbl_PLCCForm_creditLimit $undefined"
    textAlign="center"
    textDecoration={null}
  />
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": undefined,
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
  <Styled(View)>
    <RichText
      domStorageEnabled={false}
      javaScriptEnabled={false}
      source={
        Object {
          "html": "xyz",
        }
      }
      thirdPartyCookiesEnabled={false}
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color="white"
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_PLCCForm_continueShopping"
      theme={Object {}}
      type="submit"
      url=""
      width="100%"
    />
  </Styled(View)>
  <Styled(View)>
    <Styled(Styled(BodyCopy))
      accessibilityText=""
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs10"
      margin={null}
      numberOfLines={null}
      paddingRight="4px"
      text="lbl_PLCCModal_linksTextPrefix"
      textDecoration={null}
    />
    <Styled(Styled(Anchor))
      accessibilityLabel=""
      anchorVariation="primary"
      colorName={null}
      customStyle={Object {}}
      fontSizeVariation="medium"
      locator=""
      onPress={null}
      paddingRight="28px"
      text="lbl_PLCCForm_details"
      underline={true}
      url="lbl_PLCCModal_detailsLink"
      visible={false}
    />
  </Styled(View)>
</Styled(ScrollViewMock)>
`;
